--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="menu_home">Aktualności</string>
     <string name="menu_lectures">Wykłady</string>
-    <string name="menu_quiz">Test</string>
+    <string name="menu_quiz">Quiz</string>
     <string name="menu_labs">Instrukcje laboratoryjne</string>
     <string name="buttonStartQuiz">Rozpocznij Quiz</string>
     <string name="test_title">Przykładowe pytania na egzaminie</string>
