--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="exit">Naciśnij jeszcze raz, aby zamknąć aplikację.</string>
     <string name="buttonNextSlide">Następny Slajd</string>
     <string name="buttonPreviousSlide">Poprzedni Slajd</string>
+    <string name="updateQuestions">Aktualizuj pytania</string>
 </resources>
