getting notices from db & minor improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="buttonNextSlide">Następny Slajd</string>
     <string name="buttonPreviousSlide">Poprzedni Slajd</string>
     <string name="updateQuestions">Aktualizuj pytania</string>
+    <string name="buttonExitQuiz">Przerwij Quiz</string>
 </resources>
