--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="buttonPreviousSlide">Poprzedni Slajd</string>
     <string name="updateQuestions">Aktualizuj pytania</string>
     <string name="buttonExitQuiz">Przerwij Quiz</string>
+    <string name="next_answer">Następna odpowiedź</string>
 </resources>
