--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="updateQuestions">Aktualizuj pytania</string>
     <string name="buttonExitQuiz">Przerwij Quiz</string>
     <string name="next_answer">Następna odpowiedź</string>
+    <string name="previous_answer">Poprzednia odpowiedź</string>
 </resources>
