--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="menu_quiz">Quiz</string>
     <string name="menu_labs">Instrukcje laboratoryjne</string>
     <string name="buttonStartQuiz">Rozpocznij Quiz</string>
-    <string name="test_title">Wybierz kategorię pytań i rozpocznij quiz!</string>
+    <string name="test_title">Wybierz kategorię oraz ilość pytań i rozpocznij quiz!</string>
     <string name="check_answer">Sprawdź</string>
     <string name="next_question">Następne pytanie</string>
     <string name="finish">Zakończ</string>
